--- a/sales.css
+++ b/sales.css
@@ -3,8 +3,12 @@
     padding:0;
     box-sizing: border-box;
 }
+table, td, th {
+    border: 3px solid black;
+    padding:3px;
+}
 
-body{
+/* body{
     justify-content: center;
     background-color: black;
     border:2px solid white;
@@ -46,4 +50,4 @@ h2{
     color:green;
     text-decoration: underline;
 }
-
+ */
