--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 body{
     background:aqua;
+    
   
 }
 
@@ -43,7 +44,7 @@ li{
     color:rgb(0, 255, 255);
     background:rgb(214, 100, 6);
     height:460px;
-    width:100%;
+    width:98%;
     border:10px solid rgb(0, 255, 255);
     display:flex;
     flex-direction: column;
@@ -59,3 +60,11 @@ li{
 #content img{
    border:5px solid orange;
 }
+#Footer{
+    width:100%;
+    display:flex;
+    justify-content: space-evenly;
+   border:1px solid black;
+
+}
+span{font-size:30px;}
