--- a/style.css
+++ b/style.css
@@ -74,9 +74,11 @@ li{
 }
 #Footer{
     width:100%;
-    height:30px;
+    height:100%;
     margin-bottom: 10px;
     display:flex;
+    flex-direction: column;
+    padding:10px;
     justify-content: space-evenly;
    border:1px solid black;
    background-color:orange;
@@ -94,4 +96,43 @@ font-size: larger;}
 #pics{
     display:flex;
     
+}
+
+section{
+    border:10px solid black;
+    height:100%;
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+Section div {
+    width:100%;
+    height:100%;
+    display: flex;
+}
+
+
+#firstRow{
+    width:100%;
+    height:200px;
+    border:5px solid black;
+    display:flex;
+    justify-content: center;
+    border:5px solid black;
+    
+}
+#firstRow img{
+    height:100%;
+}
+#second{
+    width:100%;
+    height:200px; 
+    border:15px solid black;
+    }
+#second img{
+    width:50%;
+    height:100%;
+    object-fit: contain;
 }
