--- a/sales.css
+++ b/sales.css
@@ -17,6 +17,27 @@ a{
     font-size:50px;
     color:black;
 }
+#firstD{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid black;
+    height:100vh
+}
+option{
+    text-align: center;
+    border:1px solid black;
+}
+button{
+    height:30px;
+    width:100px;
+    border-radius: 20%;;
+}
+fieldset{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 
 /* body{
